dumpcpp: Do not generate qRegisterMetaType<> for vtable-stubs.

vtable-stubs inherit QAxObject and can thus not be copied. When
using qRegisterMetaType<> on them, cryptic error messages are
generated:

src/activeqt/container/qaxobject.h(58) : error C2248: 'QObject::QObject' : cannot access private member declared in class 'QObject'
src/corelib/kernel/qobject.h(275) : see declaration of 'QObject::QObject'
include\qtcore\../../src/corelib/kernel/qobject.h(96) : see declaration of 'QObject'

To fix this, extract a list of the stubs at the beginning and suppress
the generation of qRegisterMetaType<> for them.
When writing out the class declaration, explicitly disable copy
for them to make error messages clearer.

Task-number: QTBUG-27792
Change-Id: Ia538a68864f3621234c1aab366b097ded881e859
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>